Add project ports mapping and enhance monitoring UI

--- a/monitoring/templates/index.html
+++ b/monitoring/templates/index.html
@@ -31,6 +31,7 @@
     <thead>
       <tr>
         <th>Project</th>
+        <th>Ports</th>
         <th>Health</th>
         <th>Last Checked</th>
         <th>Status</th>
